perf: optimize content query performance via database-driven cursor pagination and denormalization